--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@ ol {
 .content__list {
   position: relative;
   height: 298px;
+  width: 417px;
   overflow: auto;
 }
 
@@ -70,10 +71,9 @@ ol {
 .result__video-container {
   position: relative;
   width: 711px;
-  min-height: 386px;
+  height: 386px;
   margin-bottom: 16px;
 }
-
 
 /* Автотесты гитхаба не пропустили position absolute в данном месте. Убрал его полностью */
 
@@ -84,7 +84,7 @@ ol {
 }
 
 .content__video-card-thumbnail {
-  width: 200px;
+  width: 194px;
   height: 103px;
   object-position: center;
   object-fit: cover;
@@ -137,8 +137,9 @@ ol {
 
 .content__card-link {
   text-decoration: none;
-  color: #ffffff;
+  color: #fff;
   display: block;
+  margin: 3px;
 }
 
 .content__card-link_current {
@@ -150,10 +151,15 @@ ol {
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
+  max-width: 200px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .content__video-card-description {
   line-height: 16.2px;
+  max-width: 200px;
 }
 
 .search-form__fieldset {
@@ -164,12 +170,12 @@ ol {
   appearance: none;
   font-family: "Fira Sans Condensed", sans-serif;
   background-color: inherit;
-  color: #ffffffb2;
+  color: #fff;
   font-size: 18px;
   width: 225px;
   border: none;
-  border-top: 1px solid white;
-  border-bottom: 1px solid white;
+  border-top: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
 }
 
 .search-form__label {
@@ -253,21 +259,27 @@ ol {
 
 .search-form__label:hover .search-form__label-text {
   text-decoration: underline;
-}
-
-.content__list-item:hover {
   cursor: pointer;
 }
 
-.content__list-item:hover .content__video-card-description-container {
+.content__card-link:hover {
+  cursor: pointer;
   text-decoration: underline;
-  text-underline-offset: 6px;
+  text-decoration-skip-ink: none;
 }
 
-.content__list-item:focus {
+.content__card-link:hover .content__video-card-title {
+  text-decoration: underline 2px;
+}
+
+.content__card-link:hover .content__video-card-description {
+  text-decoration: underline 1px;
+}
+
+.content__card-link:focus {
   outline: none;
 }
 
-.content__list-item:focus-visible {
-  outline: 1px solid white;
+.content__card-link:focus-visible {
+  outline: 3px solid white;
 }
